Fixed minor potential bugs & styling for constructors etc.